Release 3.5.3
=============

Bugs fixed
----------

- Pandas converter no longer fails with arrays of `dtype`
  :class:`pandas.BoolDtype` or :class:`pandas.Float64Dtype`.(issue #880).


Release 3.5.2
=============

New features
------------

- The string representation for :class:`rpy2.robjects.conversion.Converter`
  objects lists classes the converter will dispatch on.

Bugs fixed
----------

- :meth:`rpy2.robjects.vectors.FactorVector.iter_labels` was failing if
  any element is NA (issue #879).

- The definition of converters was not thread-safe. The fix deprecates
  the use of :obj:`rpy2.robjects.conversion.converter` and replaces it
  with :func:`rpy2.robjects.conversion.get_conversion`.


Release 3.5.1
=============

Bugs fixed
----------

- Fix `__setitem__` on R list when the value is a simple Python object with
  a default low-level conversion (issue #864).

- The default converter for the rmagic could fail with a
  :class:`RecursionError` (issue #866).


Release 3.5.0
=============

New features
------------

- :obj:`rpy2.rinterface.NULL` can be refererenced in code before the embedded
  R is initialized.

- `LD_LIBRARY_PATH` is obtained from the executable `RScript` and set prior
  to initializing R at the :mod:`rpy2.rinterface` level (issue #833).

- The package is now fully typed with type hints.

- The :func:`rpy2.rinterface.evalr` accepts the named parameters `envir`
  and `enclos`, mirroring better the signature of the R function `eval`.

- New function :func:`rpy2.rinterface.evalr_expr` to evaluate R expressions.

- :mod:`rpy2.situation` is now using a module-level (called `logger`) to
  facilitate troubleshooting. When the module is run as an executable
  the flag `--verbose` can take the possible values DEBUG, INFO, WARNING, ERROR.

Changes
-------

- Better customizablity of conversion rules from R objects with `typeof`
  `INTSXP` (array of integers), `VECSEXP` (R list), and `LGLSXP` (array of
  booleans) :mod:`pandas`.
