@@ -178,8 +178,10 @@ def rpy2py_data_frame(obj):
     return res
 
 
-def rpy2py_list(obj):
+def rpy2py_list(obj: rinterface.ListSexpVector):
     # not a data.frame, yet is it still possible to convert it
+    if not isinstance(obj, ro.vectors.ListVector):
+        obj = ro.vectors.ListVector(obj)
     res = rlc.OrdDict(
         [(n, ro.conversion.converter_ctx.get().rpy2py(x))
          for n, x in obj.items()])
