@@ -274,28 +274,40 @@ class TestPandasConversions(object):
             rp_c = robjects.conversion.converter_ctx.get().py2rpy(category)
             assert isinstance(rp_c, robjects.vectors.FactorVector)
 
-    def test_datetime2posixct(self):
+    @pytest.mark.parametrize(
+        'py_timezone,cv_timezone,delta',
+        (('UTC', 'UTC', 0),
+         (None, 'UTC', 0),
+         (None, 'UTC+1:00', 1),
+         ('UTC+1:00', 'UTC+1:00', 0)))
+    def test_datetime2posixct(self, py_timezone, cv_timezone, delta):
         datetime = pandas.Series(
             pandas.date_range('2017-01-01 00:00:00.234',
-                              periods=20, freq='ms', tz='UTC')
+                              periods=20, freq='h', tz=py_timezone)
         )
         with localconverter(default_converter + rpyp.converter) as cv:
             rp_c = robjects.conversion.converter_ctx.get().py2rpy(datetime)
             assert isinstance(rp_c, robjects.vectors.POSIXct)
-            assert int(rp_c[0]) == 1483228800
-            assert int(rp_c[1]) == 1483228800
+            assert int(rp_c[0]) == 1483228800.234
+            assert int(rp_c[1]) == 1483228800.234
             assert rp_c[0] != rp_c[1]
 
-    def test_datetime2posixct_withNA(self):
+    @pytest.mark.parametrize(
+        'py_timezone,cv_timezone,delta',
+        (('UTC', 'UTC', 0),
+         (None, 'UTC', 0),
+         (None, 'UTC+1:00', 1),
+         ('UTC+1:00', 'UTC+1:00', 0)))
+    def test_datetime2posixct_withNA(self, py_timezone, cv_timezone, delta):
         datetime = pandas.Series(
             pandas.date_range('2017-01-01 00:00:00.234',
-                              periods=20, freq='ms', tz='UTC')
+                              periods=20, freq='h', tz=py_timezone)
         )
         datetime[1] = pandas.NaT
         with localconverter(default_converter + rpyp.converter) as cv:
             rp_c = robjects.conversion.converter_ctx.get().py2rpy(datetime)
             assert isinstance(rp_c, robjects.vectors.POSIXct)
-            assert int(rp_c[0]) == 1483228800
+            assert int(rp_c[0]) == 1483228800.234
             assert math.isnan(rp_c[1])
             assert rp_c[0] != rp_c[1]
 
